[package]
name = "async-http-proxy"
version = "1.2.0"
authors = ["LinkTed <link.ted@mailbox.org>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Lightweight asynchronous HTTP proxy client library"
readme = "README.md"
keywords = ["http", "proxy", "async", "client"]
repository = "https://github.com/LinkTed/async-http-proxy"
categories = ["network-programming"]
include = ["src/**/*.rs", "examples/*.rs", "Cargo.toml", "README.md", "LICENSE"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
basic-auth = ["base64"]
runtime-tokio = ["tokio"]
runtime-async-std = ["async-std"]

[dependencies]
thiserror = "~1.0.26"
httparse = "~1.4.1"

[dependencies.tokio]
version = "~1.8.1"
features = ["io-util"]
optional = true

[dependencies.async-std]
version = "~1.9.0"
optional = true

[dependencies.base64]
version = "~0.13.0"
optional = true

[dev-dependencies.tokio]
version = "~1.8.1"
features = ["net", "rt-multi-thread", "macros"]

[[example]]
name = "tokio_connect"
required-features = ["runtime-tokio"]

[[example]]
name = "tokio_basic_auth"
required-features = ["runtime-tokio", "basic-auth"]

[[example]]
name = "async_std_connect"
required-features = ["runtime-async-std"]

[[example]]
name = "async_std_basic_auth"
required-features = ["runtime-async-std", "basic-auth"]
